import se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask

plugins {
    id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.71.4"
    id "org.sonarqube" version "3.3"
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'jacoco'
    apply plugin: 'signing'

    sourceCompatibility = 17
    targetCompatibility = 17

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

group 'ru.keepupproject.plugins'
version '2.0.0-alpha'

subprojects {
    java {
        withJavadocJar()
        withSourcesJar()
    }

    group 'ru.keepupproject'
    version '2.0.0-alpha'
}

dependencies {
    compileClasspath "se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.71.4"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    testLogging.showStandardStreams = true
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

subprojects {
    test.useTestNG()
    sonarqube {
        properties {
            property "sonar.projectKey", "FedorSergeev_keepup"
            property "sonar.organization", "fedorsergeev"
            property "sonar.host.url", "https://sonarcloud.io"
            property "sonar.coverage.jacoco.xmlReportPaths", "../build/reports/jacoco.xml"
        }
    }
}

task codeCoverageReport(type: JacocoReport) {
    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")

    subprojects.each {
        sourceSets it.sourceSets.main
    }

    reports {
        xml.enabled true
        xml.destination file("${buildDir}/reports/jacoco.xml")
        html.enabled true
        csv.enabled false
    }
}

task generateGitChangelogInlineTemplate(type: GitChangelogTask) {
    fromRepo = file(".")
    file = new File("CHANGELOG.md")
    templateContent = """
# Changelog
Changelog
{{#tags}}
## {{name}}
 {{#issues}}
  {{#hasLink}}
### {{name}} [{{issue}}]({{link}}) {{title}}
  {{/hasLink}}
  {{^hasLink}}
### {{name}}
  {{/hasLink}}
  {{#commits}}
[{{hash}}](https://github.com/FedorSergeev/keepup/commit/{{hash}}) {{authorName}} *{{commitTime}}*
{{{message}}}
  {{/commits}}
 {{/issues}}
{{/tags}}
 """
}

codeCoverageReport.dependsOn {
    subprojects*.test
}

sonarqube {
    properties {
        property "sonar.projectKey", "FedorSergeev_keepup"
        property "sonar.organization", "fedorsergeev"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}